v3/k8s/api/api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-api-ingress
  namespace: todo-app
  annotations:
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-methods: "PUT, GET, POST, OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
spec:
  rules:
    - host: api.todo-app.com
      http:
        paths:
          - path: /admin
            pathType: Prefix
            backend:
              service:
                name: todo-api-service
                port:
                  number: 8000
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: todo-api-service
                port:
                  number: 8000
