v3/k8s/api/api-network.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: todo-api-network
  namespace: todo-app
spec:
  podSelector:
    matchLabels:
      app: todo-api
  policyTypes:
    - Egress
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: postgres
      ports:
      - port: 5432
