v3/k8s/api/dns-network.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: todo-api-deny-egress
  namespace: todo-app
spec:
  podSelector:
    matchLabels:
      app: todo-api
  policyTypes:
  - Egress
  egress:
  # allow DNS resolution
  - ports:
    - port: 53
      protocol: UDP
    - port: 53
      protocol: TCP
